--- a/src/MEGASync/transfers/gui/ui/TransferManagerLoadingItem.ui
+++ b/src/MEGASync/transfers/gui/ui/TransferManagerLoadingItem.ui
@@ -43,7 +43,7 @@
     min-height: 1px;
     max-height: 1px;
     border: none;
-    background: #EEEEEE;
+    background: #B0B1B31A;/*colorToken.border-subtle*/
 	margin-left: 24px;
 	margin-right: 24px;
 }
@@ -53,7 +53,12 @@
     padding: 0;
     margin: 0;
 }
-</string>
+
+#lTransferName, #typePlaceHolder, #sizePlaceholder, #SpeedPlaceHolder, #statusPlaceHolder, #itemPlaceHolder
+{
+border-radius: 4px;
+background-color: #EFEFF0;/*colorToken.surface-2*/
+}</string>
   </property>
   <layout class="QVBoxLayout" name="TransferManagerItemLayout">
    <property name="spacing">
@@ -107,9 +112,6 @@
      <property name="autoFillBackground">
       <bool>false</bool>
      </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
-     </property>
      <layout class="QHBoxLayout" name="stateActiveLayout" stretch="0,0,1,0,0,0,0,0,0">
       <property name="spacing">
        <number>0</number>
@@ -136,14 +138,14 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>48</width>
-          <height>48</height>
+          <width>24</width>
+          <height>24</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>48</width>
-          <height>48</height>
+          <width>24</width>
+          <height>24</height>
          </size>
         </property>
         <property name="autoFillBackground">
@@ -172,18 +174,15 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>30</width>
-             <height>30</height>
+             <width>18</width>
+             <height>20</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>30</width>
-             <height>30</height>
+             <width>18</width>
+             <height>20</height>
             </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(200, 200, 200);</string>
            </property>
           </widget>
          </item>
@@ -253,21 +252,17 @@
            <property name="minimumSize">
             <size>
              <width>105</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="autoFillBackground">
             <bool>false</bool>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(200, 200, 200);
-border-radius: 4px;</string>
            </property>
           </widget>
          </item>
@@ -315,13 +310,13 @@ border-radius: 4px;</string>
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="styleSheet">
@@ -370,45 +365,21 @@ border-radius:4px;</string>
           <number>0</number>
          </property>
          <item>
-          <widget class="QWidget" name="SpeedPoint" native="true">
-           <property name="minimumSize">
-            <size>
-             <width>10</width>
-             <height>10</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>10</width>
-             <height>10</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(200, 200, 200);
-border-radius: 4px;</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QWidget" name="SpeedPlaceHolder" native="true">
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="autoFillBackground">
             <bool>false</bool>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">border-radius:4px;
-background-color: rgb(200, 200, 200);</string>
            </property>
           </widget>
          </item>
@@ -456,18 +427,14 @@ background-color: rgb(200, 200, 200);</string>
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>10</height>
+             <height>8</height>
             </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(200, 200, 200);
-border-radius:4px;</string>
            </property>
           </widget>
          </item>
@@ -512,18 +479,14 @@ border-radius:4px;</string>
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>10</height>
+             <height>8</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>10</height>
+             <height>8</height>
             </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(200, 200, 200);
-border-radius:4px;</string>
            </property>
           </widget>
          </item>
