--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -209,5 +209,13 @@
         <file alias="play_square_small_thin_outline_secondary">images/themed/dark/play_square_small_thin_outline_secondary.svg</file>
         <file alias="chevron_down_small_thin_outline_secondary">images/themed/dark/chevron_down_small_thin_outline_secondary.svg</file>
         <file alias="chevron_up_small_thin_outline_secondary">images/themed/dark/chevron_up_small_thin_outline_secondary.svg</file>
+        <file alias="pause_small_thin_outline_button_outline">images/themed/dark/pause_small_thin_outline_button_outline.svg</file>
+        <file alias="x_small_thin_outline_button_outline">images/themed/dark/x_small_thin_outline_button_outline.svg</file>
+        <file alias="minus_square_small_thin_solid_support_warning">images/themed/dark/minus_square_small_thin_solid_support_warning.svg</file>
+        <file alias="eraser_small_thin_solid_secondary">images/themed/dark/eraser_small_thin_solid_secondary.svg</file>
+        <file alias="x_small_thin_outline_button_outline_hover">images/themed/dark/x_small_thin_outline_button_outline_hover.svg</file>
+        <file alias="pause_small_thin_outline_button_outline_hover">images/themed/dark/pause_small_thin_outline_button_outline_hover.svg</file>
+        <file alias="play_small_thin_outline_button_outline">images/themed/dark/play_small_thin_outline_button_outline.svg</file>
+        <file alias="play_small_thin_outline_button_outline_hover">images/themed/dark/play_small_thin_outline_button_outline_hover.svg</file>
     </qresource>
 </RCC>
